# hAACs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  quick_buttons.txt  speedy_speller_1.txt  speedy_speller_2.txt
.github/workflows/: build.yml  quality-control.yml
src/: bluetooth.rs  keyboard.rs  main.rs  main_menu.rs  speedy_spellers.rs  tts_impl.rs  wifi.rs  word_model.rs
ui/: aac_menu.slint  adaptive_keyboard.slint  app.slint  basic_keyboard.slint  basic_screen.slint  carousel.slint  carousel_theme.slint  carousel_widget.slint  keyboard_overlay.slint  main_menu.slint  main_menu_widget.slint  settings_menu.slint
ui/callback/: aac_callbacks.slint  keyboard_callbacks.slint
ui/data/: format.slint  settings_data.slint
ui/games/alphabet_game/: alphabet_game.slint
ui/widgets/carousel/: carousel.slint  carousel_theme.slint  carousel_title.slint
ui/widgets/home_button/: home_button.slint
ui/widgets/textbox/: textbox.slint
