[package]
name = "haacs"
version = "0.0.1"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
slint = "1.10.0"
fuzzy-matcher = "*"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "rt", "time"] }
rand = "0.9.1"
libc = "0.2.170"
rodio = "0.20.1"

[target.'cfg(unix)'.dependencies]
# Bluetooth
bluez-async = "0.8.0"

[build-dependencies]
slint-build = "1.10.0"


